# generate_falcon_accounts

./: Cargo.toml  README.md  info
src/: main.rs  main.rs.txt
